@@ -1,5 +1,7 @@
 Changes for 1.6.5
 
+ - [ZBX-884] fixed sudden stop of Jabber notifications (Sasha)
+ - [ZBX-884] added subject field for Jabber notifications (Sasha)
  - [ZBX-460] fixed processing `distclean' target of `Makefile' for zabbix_proxy (Dmitry)
  - [ZBX-882] fixed template linkage form (Artem)
  - [ZBX-879] fixed maximum 30 issues shown in Dahsboard system status (Vedmak)
